# financial-data-platform

./: .dockerignore  .env.example  .gitignore  AWS_GLOSSARY.md  CHANGELOG.md  Dockerfile  LICENSE  README-FRONTEND.md  README-INGEST.md  README.md  TECHNICAL_SHOWCASE.json  apunte_sistema.md  bottlenecks.json  bronze_showcase.py  catalog.json  docker-compose.yml  pyproject.toml  tasks_for_websocket_production.json  test_live_compute.py  test_live_orchestrator.py  test_live_session_manager.py  test_live_state.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml  oidc-test.yml
aws/: api-task-definition.json  autoscaling-policy.json  cloudfront-distribution.json  create-api-service.json  eventbridge-policy.json  github-actions-deploy-policy.json
aws/cloudfront/: cloudfront-oac.json
aws/ecs/: api-task-definition.json  etl-task-definition.json  secrets-policy.json  utility-task-definition.json
aws/eventbridge/: eventbridge-schedule.json
aws/github-actions/: oidc-trust-policy.json
aws/iam/: financial-etl-task-role-policy.json  financial-etl-task-role-secrets-policy.json  vps-scraper-policy.json
aws/lambda/: etl_universe.txt  lambda-etl-policy.json  lambda-etl-trigger.py
aws/lambda/s3-done-trigger/: lambda_function.py  policy.json
aws/s3/: raw-bucket-notification.json  s3-bucket-policy.json
aws/vps/: README.md
aws/vps/systemd/: financial-vps-scraper.service  financial-vps-scraper.timer
etl_extract/: backfill_derived_metrics.py  extract-config.json  extract_to_s3.py  load_to_bigquery.py
financial_data_etl/: catalog.json  main_runner.py  time_utils.py
financial_data_etl/api/: app.py  bq_analytics.py  db.py  live_compute.py  live_seed.py  live_session_manager.py  live_state.py  sync_db_to_server.py
financial_data_etl/derived_metrics/momentum/: momentum_runner.py  momentum_store.py
financial_data_etl/derived_metrics/price_performance/: price_performance_runner.py  price_performance_store.py
financial_data_etl/derived_metrics/volatility/: volatility_runner.py  volatility_store.py
financial_data_etl/derived_metrics/volume/: volume_runner.py  volume_store.py
financial_data_etl/observability/: README_observability.md  run_context.py
financial_data_etl/storage/: database.py  fundamentals_store.py  increment_planner.py  ohlcv_base_store.py  ohlcv_row_builder.py  paths.py  raw_s3_reader.py  tv_candles_store.py
financial_data_etl/universe/: universe_resolver.py  universe_service.py
financial_data_etl/universe/screener/: build_index_catalog.py  (+1 more)
financial_data_etl/vps_scraper/: __init__.py  api_client.py  chunk_orchestrator.py  config.py  lockfile.py  runner.py  s3_uploader.py
financial_dwh/: README.md  dbt_project.yml  packages.yml  profiles.yml
financial_dwh/macros/: generate_schema_name.sql  z_score.sql
frontend/: .env.production  Dockerfile  FRONTEND_PLAN.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.tsx  index.css
gcp/bigquery/: datasets.json  service-account-config.json
jsons-ignorar/: bottlenecks.json  streaming_migration_plan.json  tasks_for_websocket_production.json
scripts/: extract_snapshot.py
standalone_tests/: test_live_seed.py  test_live_stream.py  test_security_handshake.py
tests/: test_api_healthcheck.py  test_live_compute.py  test_main_runner_cli.py
tests/integration/: test_etl_smoke.py
(+47 files in other folders)
